# RAG_Grappus

./: main.py  pyproject.toml  requirements.txt
Personal/: Explain.ipynb
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
data/vector_store/9da832b6-9a18-448f-a1f8-6c268c3ad843/: index_metadata.pickle
notebook/: document.ipynb  pdf_loader.ipynb
